<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    >

    <LinearLayout
        android:id="@+id/descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="  Cake Details:"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/flavour"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/cake_flavour"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_cake"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shape_cake"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/includes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_the_box"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Deliveryinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textviewpara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/delivery_info"
             android:textColor="#e2000000"
            android:textSize="18sp" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerCart"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>