<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
     >
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:id="@+id/toolbar"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
      >

        <ImageView
            android:id="@+id/backpopupweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backtomenu"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:fitsSystemWindows="false"
            android:src="@drawable/back" />
        <TextView
            android:id="@+id/toolbartext"
            android:layout_marginLeft="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/transaction_status"
            android:textColor="#000" />
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <RelativeLayout
                android:id="@+id/TransactionFailed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/failImage"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textView12"
                    android:layout_toRightOf="@+id/textView12"
                    android:src="@drawable/oops" />

                <TextView
                    android:id="@+id/PaymentStatus"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/failImage"
                    android:layout_centerHorizontal="true"
                    android:text="@string/oops_transaction_failed"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/ExtraInfo"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:gravity="start"
                    android:maxLines="10"
                    android:text="@string/reason"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView12"
                    android:layout_alignStart="@+id/textView12"
                    android:layout_below="@+id/reason"
                    android:layout_marginTop="13dp"
                    android:text="@string/OrderNo"
                    android:textAlignment="center"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/orderId"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView11"
                    android:layout_alignBottom="@+id/textView11"
                    android:layout_marginLeft="114dp"
                    android:layout_marginStart="114dp"
                    android:layout_toEndOf="@+id/textView12"
                    android:layout_toRightOf="@+id/textView12"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignBaseline="@+id/amount"
                    android:layout_alignBottom="@+id/amount"
                    android:layout_alignLeft="@+id/reason"
                    android:layout_alignStart="@+id/reason"
                    android:layout_marginLeft="53dp"
                    android:layout_marginStart="53dp"
                    android:text="Amount"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/orderId"
                    android:layout_alignStart="@+id/orderId"
                    android:layout_below="@+id/orderId"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/goback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView12"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_button_transparent"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:onClick="gobackTopayment"
                    android:text="@string/retry_the_transaction"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_purple" />

                <TextView
                    android:id="@+id/ExtraInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/reason"
                    android:layout_alignStart="@+id/reason"
                    android:layout_below="@+id/PaymentStatus"
                    android:text="It looks like you cancel the transaction" />
            </RelativeLayout>



            <include layout="@layout/sucessfultrasaction" />
        </RelativeLayout>
    </ScrollView>




 <include layout="@layout/progress_layout"
    android:visibility="visible"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
    android:id="@+id/loading"/>

    <Button
        android:id="@+id/tomenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonlayout"
        android:onClick="backtomenu"
        android:text="Back to menu"
        android:textColor="#fff"
        android:visibility="visible" />
</RelativeLayout>